--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,9 +12,18 @@ FetchContent_Declare(
   URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
 )
 FetchContent_MakeAvailable(googletest)
+FetchContent_Declare(
+  googlebenchmark
+  GIT_REPOSITORY https://github.com/google/benchmark.git
+  GIT_TAG v1.8.3
+)
+FetchContent_MakeAvailable(googlebenchmark)
+
+set(CMAKE_BUILD_TYPE Release CACHE String "Build type" FORCE)
 
 enable_testing()
 
 add_subdirectory(src)
 add_subdirectory(app)
 add_subdirectory(tests)
+add_subdirectory(benchmarks)
