--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -1,7 +1,12 @@
 add_executable(benchmarks
     benchmarks_rng.cpp
+    benchmarks_pricing.cpp
 )
 
+target_include_directories(benchmarks
+    PRIVATE
+    ${googlebenchmark_SOURCE_DIR}/include
+)
 target_link_libraries(benchmarks
     PRIVATE
     simdmonte_lib
