Begin implementation of Asian options

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_library(simdmonte_lib
     option.cpp
     option_european.cpp
+    option_asian.cpp
     pricer_simd.cpp
     pricer.cpp
     accumulator.cpp
