Asian option implementation, beginning to implement price types

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,6 +6,7 @@ add_library(simdmonte_lib
     pricer.cpp
     accumulator.cpp
     accumulator_european.cpp
+    accumulator_asian.cpp
     rng.cpp
     utils.cpp
     underlying.cpp
