Updated README, began overhaul of benchmark suite, implemented SISD 'naive' pricer for benchmarking purposes

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,8 +1,8 @@
-add_executable(main main.cpp)
+add_executable(euro_option euro_option.cpp)
 
 find_package(Threads REQUIRED)
 
-target_link_libraries(main
+target_link_libraries(euro_option
     PRIVATE
     simdmonte_lib
     Threads::Threads
