Added example for Asian pricing

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_executable(euro_option euro_option.cpp)
-add_executable(asian_option_sisd sisd_asian_option.cpp)
+add_executable(asian_option asian_option.cpp)
 
 find_package(Threads REQUIRED)
 
@@ -8,7 +8,7 @@ target_link_libraries(euro_option
     simdmonte_lib
     Threads::Threads
 )
-target_link_libraries(asian_option_sisd
+target_link_libraries(asian_option
     PRIVATE
     simdmonte_lib
     Threads::Threads
