--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ FetchContent_Declare(
 set(BENCHMARK_ENABLE_TESTING OFF CACHE BOOL "" FORCE)
 FetchContent_MakeAvailable(googlebenchmark)
 
-set(CMAKE_BUILD_TYPE Release CACHE String "Build type" FORCE)
+set(CMAKE_BUILD_TYPE Release CACHE STRING "Build type" FORCE)
 
 enable_testing()
 
